--- a/src/Eightball.css
+++ b/src/Eightball.css
@@ -10,7 +10,26 @@
     margin: 0;
     text-align: center;
     align-items: center;
-    border: 10px solid black;
+    border: 6px solid black;
+    transition: background-color 1000ms;
+    transition-timing-function: ease-in-out;
+}
+
+.eightball-sphere-overlay {
+    display: block;
+	box-shadow: inset -55px -55px 150px rgba(23, 23, 23, 0.5);
+	background-image: radial-gradient(circle at 30% 30%, #ffffff, #78797e, #020512);
+    opacity: 50%;
+    border-radius: 50%;
+    height: 30rem;
+    width: 30rem;
+    margin: 0;
+    text-align: center;
+    align-items: center;
+    border: 6px solid black;
+    position: absolute;
+    top: 0;
+    z-index: 0;
 }
 
 .eightball-text {
@@ -19,5 +38,8 @@
     padding-top: 35%;
     padding-bottom: 30%;
     box-sizing: content-box;
+    position: relative;
+    z-index: 1;
+    
 
 }
